src/test/deca/context/invalid/cond_if_but_int.deca
// Test of the rule 3.29 : if should have a boolean as a condition

{
    int cond = 5;
    if (cond){

    };
}

// Resultat:
//# TODOTEST  : rule 3.29
